# itk_practice

./: .env.example  .gitignore  Makefile  README.md  docker-compose.kafka.yml  docker-compose.yml  pyproject.toml  redis.conf
src/: m1_t19.py  m_1_t_19.py  m_1_t_26.py  m_2_t_11.py  m_6_t_7.py
src/m_1_t_25/: tests.py
src/m_3_t_10/: main.py  results.jsonl
src/m_3_t_20/: main.py  results.jsonl
src/m_3_t_21/: main.py  results.jsonl  urls.txt
src/puzzles/: m_1_t_1.py  m_1_t_2.py  m_1_t_3.py  m_1_t_4.py  m_2_t_1.py
src/week_1/: m_1_t_19.py  m_6_t_7.py
src/week_1/m_1_t_25/: singletons.py  test_module.py
src/week_1/m_3_t_10/: main.py
src/week_1/m_3_t_20/: main.py
src/week_1/m_3_t_21/: main.py
src/week_2/: m_1_t_10.py  m_1_t_11.py  m_1_t_12.py
src/week_2/m_1_t_10/: docker-compose.yml  main.py
src/week_2/m_1_t_6/: database.py  docker-compose.yml  main.py
src/week_2/m_3_t_2/app/: serializers.py  views.py
src/week_2/m_3_t_2/project/: settings.py  urls.py
src/week_2/m_3_t_3/app/: models.py  serializers.py  urls.py  views.py
src/week_2/m_3_t_3/app/migrations/: 0001_initial.py
src/week_2/m_3_t_3/project/: settings.py  urls.py
