[project]
name = "education"
version = "0.1.0"
description = "ITK python practice tasks"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.11.13",
    "pandas>=2.2.3",
    "ruff>=0.9.7",
]

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
