[project]
name = "education"
version = "0.1.0"
description = "ITK python practice tasks"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "aiohttp>=3.11.13",
    "pandas>=2.2.3",
    "requests>=2.32.3",
    "ruff>=0.9.7",
    "waitress>=3.0.2",
]

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
