[project]
name = "education"
version = "0.1.0"
description = "ITK python practice tasks"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "aiohttp>=3.11.13",
    "aiokafka>=0.12.0",
    "django>=5.1.6",
    "djangorestframework>=3.15.2",
    "djangorestframework-simplejwt>=5.5.0",
    "pandas>=2.2.3",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.0.1",
    "redlock-py>=1.0.8",
    "requests>=2.32.3",
    "ruff>=0.9.7",
    "sqlalchemy>=2.0.38",
    "waitress>=3.0.2",
]

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint.isort]
known-first-party = ["app"]
